# kk-solver

./: kk_solver.py  kkn_solver.py  pyproject.toml
tests/: kk_problems.py  kkn_problems.py
