[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "kk-solver"
authors = [
  { name="Henry Ding", email="ding.henry.23@gmail.com" },
]
description = "Solves Knights and Knaves (and Normals) problems for Choate MA680."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [ ]
dynamic = ["version"]

[tool.setuptools_scm]